# datagems-python-project

./: README.md  cookiecutter.json
docs/: index.md  prompt_arguments.md
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/docs/: index.md
