[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

{% if cookiecutter.layout == "flat" -%}
[tool.setuptools]
py-modules = ["{{cookiecutter.project_slug}}"]
{%- endif %}


[tool.pytest.ini_options]
testpaths = ["tests"]


{% if cookiecutter.codecov == "y"-%}
[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = [
    {%- if cookiecutter.layout == "src" -%}
    "src"
    {%- else -%}
    "{{cookiecutter.project_slug}}"
    {%- endif -%}
]
{% endif %}
